css/styles.css
/* ... */
blockquote p:after {
  color: var(--baseFour);
  font-family: times;
  content: '”';
  font-size: 3.2em;
  line-height: 0em;
  margin-right: 0.05em;
  vertical-align: -0.4em;
}
.chip {
  color: var(--white);
  font-size: calc(100% * .55);
  padding: 4px 8px;
  border-radius: 16px;
  font-weight: 600;
  margin: 2px 2px 2px 0;
  vertical-align: middle;
  display: inline-block;
  opacity: 1;
  text-transform: uppercase;
  letter-spacing: 0.04em;
}
.chip-designer { background-color: var(--chip); }
.chip-researcher { background-color: var(--primary); }
.chip-strategist { background-color: var(--strategist); }
.chips {
  margin-bottom: 4px;
  line-height: 1;
}

/* --------------------------- --------- --------------------------- */
/* ---------------------- Secondary Navigation --------------------- */
/* --------------------------- --------- --------------------------- */

.secondaryNav {padding: 72px 0;}
.top_fab {
  display: flex;
  height: 56px;
  width: 56px;
  overflow:hidden;
  background: #187EAA;
  background: var(--alt);
  opacity: .5;
  border-radius: 100%;
  justify-content: center;
  top: 2em;
  left: 94vw;
  transform: translateY(calc(-90% + 94vh));
  position: sticky;
  position: -webkit-sticky;
}
.top_fab i.material-icons {
  align-self: center;
  font-size: 3.5em;
  margin: 0;
}
.top_fab:hover {
  opacity: 1;
  box-shadow: 0px 2px 6px rgba(0,0,0,0.5);
}

#secondary, .ccicon {
  display:flex;
  justify-content: center;
  align-items: center;
}
#secondary i, .ccicon i {
  display:inline-block;
  margin:8px;
  padding:0;
  width:56px;
  height:56px;
  line-height:50px;
  box-sizing:border-box;
  text-align:center;
  font-size:32px;
  font-style: normal;
  font-weight: 400;
  border:3px solid;
  background-color: var(--base);
  border-color: var(--primary);
  color: var(--primary);
}

/* --------------------------- --------- --------------------------- */
/* ------------------------- Page Structure ------------------------ */
/* --------------------------- --------- --------------------------- */

section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: auto;
  width: 100vw;
  line-height: 1.5;
}
section h1 {
  color: #1D9ED6;
  color: var(--primary);
}
section h2 {
  line-height: 3;
  color: #04648E;
  color: var(--secondary);
  align-self: flex-start;
  font-weight: 300;
}
section div p, section div ul {
  align-self: flex-start;
  margin-bottom: 40px;
}
section div h4 {
  color: #04648E;
  color: var(--secondary);
  align-self: flex-start;
}
section div {
  align-self:center;
  /* width: 100%; */
}
section div * {margin-bottom: 8px;}
/* section .flexTrio{
  display: flex;
  justify-content: center;
  align-items: center;
} */
.halfPad {padding: 72px 20vw;}
.halfPad_noTop {padding: 0px 20vw 72px;}
.quarterPad {padding: 72px 12vw;}
.eighthPad {padding: 72px 6vw;}
.noPad {padding: 72px 2vw;}

#graph {
  flex: 0 0;
  margin: 72px 0px 8px;
}

/* --------------------------- --------- --------------------------- */
/* ------------------------------ Hero ----------------------------- */
/* --------------------------- --------- --------------------------- */

.hero {padding: 64px 0px 0px;}
.hero * {align-self:center;}
.hero figure {
  display: flex;
  flex-shrink: 1;
  width: calc(100vw - 128px);
  box-shadow: 0px 4px 12px rgba(0,0,0,0.2);
  max-height: 400px;
  margin: 64px 0px;
}
.hero figure img {
  flex: 1 1;
  width: calc(100vw - 128px);
  -webkit-logical-height: auto;
  -o-object-fit: cover;
     object-fit: cover;
  max-height: 400px;
}
.hero h1 {white-space:nowrap;}
.hero h3 {margin-bottom: 2.5em;}

/* --------------------------- --------- --------------------------- */
/* ---------------------------- CS imgs ---------------------------- */
/* --------------------------- --------- --------------------------- */

section:nth-child(3) {padding-top: 0px;}
.cases figure {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  flex: 1 1;
  margin: 36px 0px 8px;
}
.cases figure img {
  flex: 1 1;
  max-width: 60vw;
  -webkit-logical-height: auto;
  -o-object-fit: cover;
     object-fit: cover;
  max-height: 600px;
}
.cases figure video {
  flex: 1 1;
  max-width: 60vw;
  -webkit-logical-height: auto;
  -o-object-fit: fill;
     object-fit: fill;
  max-height: 600px;
}
.cases figcaption {
  margin: 16px 0px 32px;
  opacity: .56;
}

/* .cases figure canvas {flex: 1 1;} */
.chartResponsive {
  position: relative;
  margin: auto;
  height: 480px;
  max-width: 1200px;
}
figure.horizontal {
  margin: 32px 0px 8px;
  /* max-height: 900px; */
}
figure.horizontal img {
  flex: 1 1;
  width: auto;
  -webkit-logical-height: auto;
  -o-object-fit: cover;
     object-fit: cover;
  max-height: 900px;
}
.caseImg {box-shadow: 0px 4px 12px rgba(0,0,0,0.2);}
.slide-up {
  opacity: 0;
  transition: all .6s;
}
.caseImg.slide-up {transform: translateY(16px) scale(0.9);}
.slide-up.active {
  opacity: 1;
  transform: translateY(0) scale(1);
}
.timeline-entry.slide-up {transform: translateY(16px) scale(1);}


/* --------------------------- --------- --------------------------- */
/* ------------------------- panels section ----------------------- */
/* --------------------------- --------- --------------------------- */

.panels {
  min-height: 80vh;
  margin: 2vw;
  overflow: hidden;
  display: flex;
  cursor: pointer;
}

.panel {
  box-shadow: inset 0 0 0 4px rgba(29,158,214,0.4);
  color: #fafafa;
  color: var(--white);
  text-align: center;
  align-items: center;
  transition:
    font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
    flex 0.7s cubic-bezier(0.31,-0.11, 0.4,-0.11);
  background-size: cover;
  background-position: center;
  flex: 1 1 auto;
  justify-content: center;
  display: flex;
  flex-direction: column;
  background-color: #1D9ED6;
  background-color: var(--primary);
  background-blend-mode: multiply;
}

.panel1 { background-image: url("../img/discover.jpg"); }
.panel2 { background-image: url("../img/ideate.jpg"); }
/* ... */

